Commit corresponding to the attempt to use Spark on a Docker cluster, instead of local[*].